<resources>
    <string name="app_name" translatable="false">Virtual IT Company</string>
    <string name="company_name" translatable="false">Virtual IT Company</string>
    <string name="company_name_description">Name of the company</string>
    <string name="company_logo_description">Logo of the company</string>
    <string name="customer_list">Customers</string>
    <string name="add_customer">Add customer</string>
    <string name="indicator_icon">Indicator icon</string>
    <string name="name_placeholder">No name</string>
    <string name="customer_search_prompt">Who are you looking for?</string>
    <string name="contact_information">Contact information</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone_number">Phone number</string>
    <string name="customer_name_placeholder">Name</string>
    <string name="customer_email_placeholder" translatable="false">user.name@example.com</string>
    <string name="phone_number_placeholder" translatable="false">701–780–3569</string>
    <string name="general">General</string>
    <string name="label_institution">Institution</string>
    <string name="label_department">Department</string>
    <string name="label_education">Education</string>
    <string name="label_external_type">Type</string>
    <string name="label_company_name">Company Name</string>
    <string name="virtual_machines">Virtual machines</string>
    <string name="label_fqdn">FQDN</string>
    <string name="label_hostname">Hostname</string>
    <string name="label_processors">vCPUs</string>
    <string name="label_memory">Memory</string>
    <string name="label_storage">Storage</string>
    <string name="specifications_and_configuration">Specifications and configuration</string>
    <string name="gb_format" translatable="false">%d GB</string>
    <string name="availability_and_back_ups">Availability and back-ups</string>
    <string name="mode_saas">SAAS</string>
    <string name="mode_paas">PAAS</string>
    <string name="mode_iaas">IAAS</string>
    <string name="template_no_template">No template</string>
    <string name="template_ai">Artificial Intelligence</string>
    <string name="template_web_server">Web server</string>
    <string name="label_mode">Mode</string>
    <string name="label_template">Template</string>
    <string name="label_reason">Reason</string>
    <string name="label_external_access">External access</string>
    <string name="label_application_date">Requested on</string>
    <string name="label_start_date">Start</string>
    <string name="label_end_date">End</string>
    <string name="date_placeholder" translatable="false">2022–11–18</string>
    <string name="backup_no_backup">No back-up</string>
    <string name="backup_daily">Daily</string>
    <string name="backup_weekly">Weekly</string>
    <string name="backup_monthly">Monthly</string>
    <string name="label_back_ups">Back-ups</string>
    <string name="label_username">Username</string>
    <string name="label_role">Role</string>
    <string name="credentials">Credentials</string>
    <string name="requester">Requester</string>
    <string name="user">User</string>
    <string name="status_requested">Requested</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_ready_to_deploy">Ready To Deploy</string>
    <string name="status_deployed">Deployed</string>
    <string name="responsible_admin">Responsible administrator</string>
    <string name="format_full_name" translatable="false">%s %s</string>
    <string name="label_login">Login</string>
    <string name="format_label" translatable="false">%s:</string>
    <string name="label_password">Password</string>
    <string name="log_out">Log out</string>
    <string name="label_firstname">Firstname</string>
    <string name="label_lastname">Lastname</string>
    <string name="back_up_contact_information">Back-up contact information</string>
    <string name="customer_type">Customer type</string>
    <string name="customer_type_internal">Internal</string>
    <string name="customer_type_external">External</string>
    <string name="locally_stored_customers">Locally stored customers</string>
    <string name="upload">Upload</string>
    <string name="client_id" translatable="false">NX6EQdmambgHSfFkN2a4b04YESJu6r94</string>
    <string name="com_auth0_domain" translatable="false">dev-ashmgrzh4gfnfa18.us.auth0.com</string>
    <string name="send_email">Send Email</string>
    <string name="call_customer">Call Customer</string>
    <string name="call_backup">Call Backup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection_sting">No internet connection</string>
    <string name="backbutton">Back</string>
    <string name="hogent">HoGent</string>
    <string name="ehb">EhB</string>
    <string name="contactpersonFirstname">Firstname of contact</string>
    <string name="contactpersonLastname">Lastname of contact</string>
    <string name="contactpersonEmail">E-mail address of contact</string>
    <string name="contactpersonPhoneNumber">Phone number of contact</string>
    <string name="backupContactFirstname">Firstname of backup contact</string>
    <string name="backupContactLastname">Lastname of backup contact</string>
    <string name="backupContactEmail">E-mail address of backup contact</string>
    <string name="backupContactPhoneNumber">Phone number of backup contact</string>
    <string name="cannotBeEmpty">cannot be empty</string>
    <string name="cannotBeTheSameAsContactPerson">cannot be the same as contact person</string>
    <string name="contactPersonRequired">Contact is required</string>
    <string name="loginSuccessful">Login successful</string>
    <string name="loginFailed">Login failed</string>
</resources>