<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vic.screens.models.ApplicationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/LinearLayoutStyle">

            <!-- Header: General -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/customer_type_label"
                style="@style/TitleContainerStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/padding_ty">

                <TextView
                    android:id="@+id/customer_type_label_title"
                    style="@style/TitleTextStyle"
                    android:text="@string/customer_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/TitleUnderlineStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/customer_type_label_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Select type of Customer -->
            <RadioGroup
                android:id="@+id/customer_type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/option_internal_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_md"
                    android:checked="true"
                    android:fontFamily="@font/graphik_semibold"
                    android:text="@string/customer_type_internal" />

                <RadioButton
                    android:id="@+id/option_external_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/graphik_semibold"
                    android:text="@string/customer_type_external" />
            </RadioGroup>

            <!-- Header: General -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/general_label"
                style="@style/TitleContainerStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/padding_ty">

                <TextView
                    android:id="@+id/general_label_title"
                    style="@style/TitleTextStyle"
                    android:text="@string/general"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/TitleUnderlineStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/general_label_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Fields: General - Internal customer -->
            <LinearLayout
                android:id="@+id/general_internal_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/label_institution" />

                <EditText
                    android:id="@+id/institution"
                    style="@style/InputStyle"
                    android:autofillHints="text"
                    android:hint="@string/label_institution"
                    android:inputType="text" />



                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/label_department" />

                <EditText
                    android:id="@+id/department"
                    style="@style/InputStyle"
                    android:autofillHints="text"
                    android:hint="@string/label_department"
                    android:inputType="text" />

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/label_education" />

                <EditText
                    android:id="@+id/education"
                    style="@style/InputStyle"
                    android:autofillHints="text"
                    android:hint="@string/label_education"
                    android:inputType="text" />
            </LinearLayout>

            <!-- Fields: General - External customer -->
            <LinearLayout
                android:id="@+id/general_external_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:showDividers="middle"
                android:visibility="gone">

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/label_external_type" />

                <EditText
                    android:id="@+id/external_type"
                    style="@style/InputStyle"
                    android:autofillHints="name"
                    android:hint="@string/label_external_type"
                    android:inputType="text" />

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/label_company_name" />

                <EditText
                    android:id="@+id/company_name"
                    style="@style/InputStyle"
                    android:autofillHints="name"
                    android:hint="@string/label_company_name"
                    android:inputType="text" />
            </LinearLayout>

            <!-- Header: Contact information -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contact_information_label"
                style="@style/TitleContainerStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/padding_ty">

                <TextView
                    android:id="@+id/contact_information_label_title"
                    style="@style/TitleTextStyle"
                    android:text="@string/contact_information"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/TitleUnderlineStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contact_information_label_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_firstname" />

            <EditText
                android:id="@+id/contact_firstname"
                style="@style/InputStyle"
                android:autofillHints="name"
                android:hint="@string/label_firstname"
                android:inputType="textPersonName" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_lastname" />

            <EditText
                android:id="@+id/contact_lastname"
                style="@style/InputStyle"
                android:autofillHints="name"
                android:hint="@string/label_lastname"
                android:inputType="textPersonName" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_email" />

            <EditText
                android:id="@+id/contact_email"
                style="@style/InputStyle"
                android:autofillHints="emailAddress"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_phone_number" />

            <EditText
                android:id="@+id/contact_phone_number"
                style="@style/InputStyle"
                android:autofillHints="phone"
                android:hint="@string/label_phone_number"
                android:inputType="phone" />


            <!-- Header: Backup contact information -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/backup_contact_information_label"
                style="@style/TitleContainerStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/padding_ty">

                <TextView
                    android:id="@+id/backup_contact_information_label_title"
                    style="@style/TitleTextStyle"
                    android:text="@string/back_up_contact_information"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/TitleUnderlineStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/backup_contact_information_label_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_firstname" />

            <EditText
                android:id="@+id/backup_contact_firstname"
                style="@style/InputStyle"
                android:autofillHints="name"
                android:hint="@string/label_firstname"
                android:inputType="textPersonName" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_lastname" />

            <EditText
                android:id="@+id/backup_contact_lastname"
                style="@style/InputStyle"
                android:autofillHints="name"
                android:hint="@string/label_lastname"
                android:inputType="textPersonName" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_email" />

            <EditText
                android:id="@+id/backup_contact_email"
                style="@style/InputStyle"
                android:autofillHints="emailAddress"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_phone_number" />

            <EditText
                android:id="@+id/backup_contact_phone_number"
                style="@style/InputStyle"
                android:autofillHints="phone"
                android:hint="@string/label_phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/add_customer_button"
                style="@style/ButtonStyle"
                android:layout_gravity="center"
                android:text="@string/add_customer" />
        </LinearLayout>

    </ScrollView>

</layout>