<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.vic.screens.models.ApplicationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Contact information label -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customer_contact_info_title_container"
            style="@style/TitleContainerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/customer_contact_title"
                style="@style/TitleTextStyle"
                android:text="@string/contact_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/customer_contact_info_title_underline"
                style="@style/TitleUnderlineStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customer_contact_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Contact information table -->
        <TableLayout
            android:id="@+id/customer_contact_information"
            style="@style/TableLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_contact_info_title_container">

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_name" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@string/customer_name_placeholder" />
            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_email" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@string/customer_email_placeholder" />
            </TableRow>

            <TableRow style="@style/LastTableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_phone_number" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@string/phone_number_placeholder" />
            </TableRow>
        </TableLayout>

        <!-- Back-up contact information table -->
        <TableLayout
            android:id="@+id/customer_backup_contact_information"
            style="@style/TableLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_contact_information">

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_name" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@string/customer_name_placeholder" />
            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_email" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@string/customer_email_placeholder" />
            </TableRow>

            <TableRow style="@style/LastTableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_phone_number" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@string/phone_number_placeholder" />
            </TableRow>
        </TableLayout>


        <Button
            android:id="@+id/virtual_machine_details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="VirtualMachineDetails"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_backup_contact_information" />

        <Button
            android:id="@+id/customer_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CustomerList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/virtual_machine_details_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>