<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.vic.screens.models.ApplicationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Table: General information -->
        <TableLayout
            android:id="@+id/virtual_machine_general_table"
            style="@style/TableLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_name" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@{viewModel.chosenVirtualMachine.name}"
                    tools:text="@string/name_placeholder" />
            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_fqdn" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@{viewModel.chosenVirtualMachine.fqdn}"
                    tools:text="@string/name_placeholder" />
            </TableRow>

            <TableRow style="@style/LastTableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_hostname" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@{viewModel.chosenVirtualMachine.host.name}"
                    tools:text="@string/name_placeholder" />
            </TableRow>
        </TableLayout>

        <!-- Label: Specifications and configuration -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/virtual_machine_specs_label"
            style="@style/TitleContainerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/virtual_machine_general_table">

            <TextView
                android:id="@+id/virtual_machine_specs_title"
                style="@style/TitleTextStyle"
                android:text="@string/specifications_and_configuration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/virtual_machine_specs_title_underline"
                style="@style/TitleUnderlineStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/virtual_machine_specs_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Table: Specifications -->
        <TableLayout
            android:id="@+id/virtual_machine_specs_table"
            style="@style/TableLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virtual_machine_specs_label">

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_processors" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@{`` + viewModel.chosenVirtualMachine.specifications.processors}"
                    tools:text="1" />
            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_memory" />

                <TextView
                    style="@style/TableRowItemStyle"

                    android:text="@{@string/gb_format(viewModel.chosenVirtualMachine.specifications.memory)}"
                    tools:text="1" />
            </TableRow>

            <TableRow style="@style/LastTableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="@string/label_storage" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="@{@string/gb_format(viewModel.chosenVirtualMachine.specifications.storage)}"
                    tools:text="1" />
            </TableRow>
        </TableLayout>

        <!-- Table: Configuration -->
        <TableLayout
            android:id="@+id/virtual_machine_config_table"
            style="@style/TableLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virtual_machine_specs_table">

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="Mode" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="ModeString"
                    tools:text="1" />
            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="Template" />

                <TextView
                    style="@style/TableRowItemStyle"

                    android:text="TemplateString"
                    tools:text="1" />
            </TableRow>

            <TableRow style="@style/TableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="Reason" />

                <TextView
                    style="@style/TableRowItemStyle"

                    android:text="ReasonString"
                    tools:text="1" />
            </TableRow>

            <TableRow style="@style/LastTableRowStyle">

                <TextView
                    style="@style/TableRowLabelStyle"
                    android:text="External access" />

                <TextView
                    style="@style/TableRowItemStyle"
                    android:text="AccessString"
                    tools:text="1" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/back_customer_details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CustomerDetails"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>